Painter actions